--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax": "^3.1.2",
     "react-scripts": "4.0.1",
+    "react-scroll-parallax": "^2.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
