--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "7.4.0",
+    "node": "15.6.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "css-animation-sync": "^0.2.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
